# DataMiner

./: CODEOFCONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
data/: Final_students_data.csv
miner/: graph_miner.py  text_miner.py
notebooks/: clustering.ipynb  graph_mining.ipynb  text_mining.ipynb
