[tool.poetry]
name = "data-mining"
version = "0.1.0"
description = ""
authors = ["Yousinator <y.omusabeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
nltk = "^3.9.1"
pandas = "^2.2.3"
networkx = "^3.4.2"
scikit-learn = "^1.6.0"
prisma-ml = "^0.1.1"
streamlit = "^1.44.1"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
